k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-portfolio-web
  labels:
    app: react-portfolio-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-portfolio-web
  template:
    metadata:
      labels:
        app: react-portfolio-web
    spec:
      imagePullSecrets:
        - name: docker-registry-secret
      containers:
      - name: react-portfolio-web
        image: IMAGE_PLACEHOLDER
        imagePullPolicy: Always
        ports:
        - containerPort: 80
  tolerations:
      - key: "resource"
        operator: "Equal"
        value: "low"
        effect: "NoSchedule"
        
      # 2. FORCE it to run on AMD hardware (Optional, if you only want it there)
  nodeSelector:
    kubernetes.io/arch: amd64
