k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-portfolio-web-service
spec:
  selector:
    app: react-portfolio-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
