k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: react-portfolio-web-ingress
  namespace: default
spec:
  entryPoints:
     - websecure
  routes:
    - match: Host(`www.kwadwolabs.cloud`)
      kind: Rule
      services:
        - name: react-portfolio-web-service
          port: 80
  tls:
    certResolver: myresolver
